--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
       content="Web site created using create-react-app"
     />
 		<title>Gourmet</title>
+		<script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+
+		<script
+			src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+			crossorigin></script>
+
+		<script
+			src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+			crossorigin></script>		
 	</head>
   <body>
 		<div id="root"></div>
